style about page to avoid contrast issue

--- a/src/styles/AboutPage.module.css
+++ b/src/styles/AboutPage.module.css
@@ -1,12 +1,12 @@
 .AboutPage {
   background-color: #f3eaf4;
-  color: var(--yinmn-blue); 
+  color: white;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: calc(100vh - 160px); 
-  margin-top: 40px; 
-  margin-bottom: 40px; 
+  min-height: calc(100vh - 160px);
+  margin-top: 40px;
+  margin-bottom: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,11 +19,12 @@ p {
   font-size: 1.2rem;
   line-height: 1.6;
   margin-bottom: 20px;
+  color: white;
 }
 
 .AboutContainer {
-  min-height: 100vh; 
-  background-color: var(--rich-black); 
+  min-height: 100vh;
+  background-color: var(--rich-black);
   color: #fff;
   padding: 20px;
 }
@@ -31,7 +32,7 @@ p {
 .Container {
   max-width: 800px;
   margin: 0 auto;
-  background-color: #374a67ff; 
+  background-color: #374a67ff;
   padding: 30px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -40,6 +41,7 @@ p {
 .Header {
   font-size: 2.5rem;
   margin-bottom: 20px;
+  color: white;
 }
 
 h2 {
@@ -52,59 +54,65 @@ p {
   font-size: 1rem;
   line-height: 1.6;
   margin-bottom: 20px;
+  color: white;
 }
 
-/* Media Queries for Mobile */
 @media (max-width: 768px) {
   .AboutPage {
-      margin-top: 20px;
-      margin-bottom: 20px;
-      padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
   }
 
   .Container {
-      padding: 20px;
+    padding: 20px;
   }
 
   .Header {
-      font-size: 2rem;
-      text-align: center;
+    font-size: 2rem;
+    text-align: center;
+    color: white;
   }
 
   h2 {
-      font-size: 1.5rem;
-      text-align: center;
+    font-size: 1.5rem;
+    text-align: center;
+    color: var(--lavender-blush);
   }
 
   p {
-      font-size: 1rem;
-      line-height: 1.4;
+    font-size: 1rem;
+    line-height: 1.4;
+    color: white;
   }
 }
 
 @media (max-width: 480px) {
   .AboutPage {
-      margin-top: 10px;
-      margin-bottom: 10px;
-      padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
   }
 
   .Container {
-      padding: 15px;
+    padding: 15px;
   }
 
   .Header {
-      font-size: 1.8rem;
-      text-align: center;
+    font-size: 1.8rem;
+    text-align: center;
+    color: white;
   }
 
   h2 {
-      font-size: 1.3rem;
-      text-align: center;
+    font-size: 1.3rem;
+    text-align: center;
+    color: var(--lavender-blush);
   }
 
   p {
-      font-size: 0.9rem;
-      line-height: 1.3;
+    font-size: 0.9rem;
+    line-height: 1.3;
+    color: white;
   }
 }
